Fixes for alignment and sizing.

--- a/css/module.css
+++ b/css/module.css
@@ -19,7 +19,7 @@
 .rte-responsive-table th,
 .rte-responsive-table td {
     padding: 8px;
-    text-align: left;
+    text-align: center;
     border: none;
 }
 
